--- a/portfolio.css
+++ b/portfolio.css
@@ -100,6 +100,7 @@ main {
     font-weight: 700;
     font-size: 35px;
     line-height: 48px;
+    text-align: center;
 
 }
 
@@ -126,5 +127,46 @@ main {
 .info-description {
     font-weight: 700;
     font-size: 20px;
-    
+
+}
+
+/* What I do section styles */
+.what-i-do {
+    margin-bottom: 30px;
+
+}
+
+p.what-i-do {
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    color: #757575;
+
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+
 }
