resume part added

--- a/portfolio.css
+++ b/portfolio.css
@@ -83,7 +83,8 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
-section{
+
+section {
     margin-top: 130px;
 }
 
@@ -171,3 +172,61 @@ p.what-i-do {
 }
 
 /* resume styles */
+.resume-content {
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.resume .sub-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 20px;
+
+
+}
+
+.resume .description {
+    color: #757575;
+    font-size: 16px;
+
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-btn {
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contact styles */
+.contact {
+    display: flex;
+    gap: 100px;
+    padding: 130px 200px;
+}
+
+.contact .section-title {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+    width: 100%;
+    padding: 18px 30px;
+}
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+}
+.contact a{
+    text-decoration: none;
+}
